[project]
name = "MLIPS"
version = "0.0.1"
description = "MLIPS project"
authors = [
   { name = "Ruben Aylwin" }
]
readme = "README.md"
requires-python = ">=3.11"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src","tests"]
